Added the automatic calculation of the total price and wrote a test for it.